--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
     <footer>
         <div class="container">
             <div class="social-links">
-                <a href="#">LinkedIn</a>
+                <a href="#">WhatsApp</a>
                 <a href="#">GitHub</a>
                 <a href="#">Twitter</a>
                 <a href="#">Dribbble</a>
